--- a/Task-Supplier/package.json
+++ b/Task-Supplier/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "~13.2.0",
     "@angular/platform-browser-dynamic": "~13.2.0",
     "@angular/router": "~13.2.0",
+    "@auth0/auth0-angular": "^1.11.1",
     "bulma": "^0.9.4",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
@@ -38,5 +39,9 @@
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
     "typescript": "~4.5.2"
-  }
+  },
+  "description": "This project was generated with [Angular CLI](https://github.com/angular/angular-cli) version 13.2.3.",
+  "main": "karma.conf.js",
+  "author": "",
+  "license": "ISC"
 }
